# llm-zoomcamp

./: pyproject.toml
01-intro/: docker-compose.yml  elasticsearch.yml
01-intro/code/: rag-intro.ipynb
