[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Matheus Rossi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
jupyterlab = "^4.2.2"
wget = "^3.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
openai = "^1.34.0"
elasticsearch = "^8.14.0"
tdqm = "^0.0.1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
